fix spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -52,7 +52,7 @@ nav{
 
   .current-weather{
     position: absolute;
-    left: 350px;
+    left: 315px;
     top: 100px;
     width: 1000px;
     height: 160px;
